--- a/test_spring/src/main/resources/templates/cart.html
+++ b/test_spring/src/main/resources/templates/cart.html
@@ -32,7 +32,7 @@
     </div>
 
     <div>
-        <p>カート内の合計: ¥<span th:text="${totalPrice}"></span></p>
+        <p>合計金額: ¥<span th:text="${totalPrice}"></span></p>
     </div>
 
     <div>
