--- a/test_spring/src/main/resources/templates/cart.html
+++ b/test_spring/src/main/resources/templates/cart.html
@@ -36,7 +36,7 @@
     </div>
 
     <div>
-        <button th:onclick="location.href='/test_spring/purchase'">レジに進む</button>
+        <button th:onclick="location.href='/test_spring/cart/confirm'">レジに進む</button>
         <button th:onclick="location.href='/test_spring/cart/cart_detail'">カートに移動</button>
         <button th:onclick="|location.href='/test_spring/products'|">TOP画面に戻る</button>
     </div>
